exmaples for python

--- a/good_examples.ipynb
+++ b/good_examples.ipynb
@@ -342,24 +342,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "True"
-     },
-     "metadata": {},
-     "execution_count": 62
-    }
-   ],
-   "source": [
-    "callable()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "tags": []
@@ -383,7 +365,13 @@
     "print(alist)\n",
     "print(blist)            \n",
     "\n",
-    "#permutasyon hesaplari, ilki tuple ikinciliste"
+    "#permutasyon hesaplari, ilki tuple ikinciliste\n",
+    "\n",
+    "'''alist=[]\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        alist.append((i,j))\n",
+    "print(alist)'''"
    ]
   },
   {
@@ -444,7 +432,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def front_back(word):\n",
+    "    a = list(word)\n",
+    "    a1 = a[0]\n",
+    "    a2 = a[-1]\n",
+    "    a[0] = a2[0]\n",
+    "    a[-1] = a1[0]\n",
+    "    print(\"\".join(a))\n",
+    "\n",
+    "    #son ve bas harfleri degsisim."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "aa\n"
+    }
+   ],
+   "source": [
+    "str = input(\"Enter a string : \")\n",
+    "new_str = str[-1:] + str[1:-1] + str[:1]\n",
+    "print(new_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'sbba'"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "temp = 'abbs'\n",
+    "temp[1:-1]\n",
+    "temp[-1:] + temp[1:-1] + temp[:1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def per(*args):\n",
+    "    return [[i,j,k] for i in args for j in args for k in args]\n",
+    "\n",
+    "    #ikili uclu vs yapilabilir\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -462,7 +513,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1595873009042",
+   "name": "python_defaultSpec_1595925514545",
    "display_name": "Python 3.8.3 32-bit"
   }
  },
