--- a/quiz2.ipynb
+++ b/quiz2.ipynb
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,20 +935,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'not good'"
+      "text/plain": "'notify'"
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 4
     }
    ],
    "source": [
-    "not_string('good')"
+    "not_string('notify')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1, 2, 3, 4, 5, 6]\n"
+    }
+   ],
+   "source": [
+    "#nestedtan tek liste yapmak\n",
+    "\n",
+    "alist = [1,2,[3,4],[5,6]]\n",
+    "blist = []\n",
+    "\n",
+    "for i in alist:\n",
+    "    if type(i) == list:\n",
+    "        for x in i:\n",
+    "            blist.append(x)\n",
+    "    else:\n",
+    "        blist.append(i)\n",
+    "print(blist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1, 2, 3, 4, 5, 6, 2, 3]\n"
+    }
+   ],
+   "source": [
+    "#nestedtan tek liste yapmak, tuple ekli\n",
+    "\n",
+    "alist = [1,2,[3,4],[5,6], (2,3)]\n",
+    "blist = []\n",
+    "\n",
+    "for i in alist:\n",
+    "    if type(i) == list or type(i) == tuple:\n",
+    "        for x in i:\n",
+    "            blist.append(x)\n",
+    "    else:\n",
+    "        blist.append(i)\n",
+    "print(blist)"
    ]
   },
   {
@@ -974,7 +1030,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1595187813635",
+   "name": "python_defaultSpec_1597070686679",
    "display_name": "Python 3.8.3 32-bit"
   }
  },
